--- a/index.html
+++ b/index.html
@@ -16,92 +16,112 @@
 </head>
 
 <body>
-  <div class="container d-flex align-items-center justify-content-center flex-column">
-    <div class="card shadow-lg mt-3 mx-3 position-relative" style="width: 20rem">
-      <div class="card-body">
-        <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
-        <p class="card-text text-justify">
-          Utilize o campo abaixo para informar a expressão lógica para que
-          seja gerada a tabela verdade.
-        </p>
-        <hr />
-        <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
-        <hr />
-        <div class="p-2">
-          <div class="row gap-2 mb-2">
-            <button class="btn btn-secondary col condicao">~</button>
-            <button class="btn btn-outline-secondary col parenteses">
-              (
-            </button>
-            <button class="btn btn-outline-secondary col parenteses">
-              )
-            </button>
-            <button id="limpar" onclick="Limpar()" class="btn btn-warning col">
-              C
-            </button>
-            <button id="deletar" onclick="Deletar()" class="btn btn-danger col">
-              DEL
-            </button>
+  <div class="container d-flex align-items-center justify-content-center flex-column mt-3">
+    <ul class="nav nav-pills" id="pills-tab" role="tablist" style="width: 20rem">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-main"
+          type="button" role="tab" aria-controls="pills-home" aria-selected="true"><i
+            class="fa-solid fa-calculator"></i></button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-config"
+          type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i
+            class="fa-solid fa-info-circle"></i></button>
+      </li>
+    </ul>
+    <div class="card shadow-lg mx-3" style="width: 20rem">
+      <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-main" role="tabpanel" aria-labelledby="pills-main-tab"
+          tabindex="0">
+          <div class="card-body mt-2">
+            <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
+            <p class="card-text text-justify">
+              Utilize o campo abaixo para informar a expressão lógica para que
+              seja gerada a tabela verdade.
+            </p>
+            <hr />
+            <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
+            <hr />
+            <div class="p-2">
+              <div class="row gap-2 mb-2">
+                <button class="btn btn-secondary col condicao">~</button>
+                <button class="btn btn-outline-secondary col parenteses">
+                  (
+                </button>
+                <button class="btn btn-outline-secondary col parenteses">
+                  )
+                </button>
+                <button id="limpar" onclick="Limpar()" class="btn btn-warning col">
+                  C
+                </button>
+                <button id="deletar" onclick="Deletar()" class="btn btn-danger col">
+                  DEL
+                </button>
+              </div>
+              <div class="d-flex flex-column mb-1">
+                <div class="row gap-2">
+                  <button class="btn btn-outline-secondary col parametro">
+                    A
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    B
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    C
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    D
+                  </button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-outline-secondary col parametro">
+                    E
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    F
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    G
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    H
+                  </button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-outline-secondary col parametro">
+                    I
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    J
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    K
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    L
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex flex-column">
+                <div class="row gap-2">
+                  <button class="btn btn-secondary col condicao">^</button>
+                  <button class="btn btn-secondary col condicao">∨</button>
+                  <button class="btn btn-secondary col condicao">⊕</button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-secondary col condicao">→</button>
+                  <button class="btn btn-secondary col condicao">↔</button>
+                  <button id="resultado" onclick="GeraTabelaVerdade()" class="btn btn-success col">
+                    RES
+                  </button>
+                  <a id="anchor-scroll" class="d-none" href="#card-resultado"></a>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="d-flex flex-column mb-1">
-            <div class="row gap-2">
-              <button class="btn btn-outline-secondary col parametro">
-                A
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                B
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                C
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                D
-              </button>
-            </div>
-            <div class="row gap-2 mt-1">
-              <button class="btn btn-outline-secondary col parametro">
-                E
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                F
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                G
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                H
-              </button>
-            </div>
-            <div class="row gap-2 mt-1">
-              <button class="btn btn-outline-secondary col parametro">
-                I
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                J
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                K
-              </button>
-              <button class="btn btn-outline-secondary col parametro">
-                L
-              </button>
-            </div>
-          </div>
-          <div class="d-flex flex-column">
-            <div class="row gap-2">
-              <button class="btn btn-secondary col condicao">^</button>
-              <button class="btn btn-secondary col condicao">∨</button>
-              <button class="btn btn-secondary col condicao">⊕</button>
-            </div>
-            <div class="row gap-2 mt-1">
-              <button class="btn btn-secondary col condicao">→</button>
-              <button class="btn btn-secondary col condicao">↔</button>
-              <button id="resultado" onclick="GeraTabelaVerdade()" class="btn btn-success col">
-                RES
-              </button>
-              <a id="anchor-scroll" class="d-none" href="#card-resultado"></a>
-            </div>
-          </div>
+        </div>
+        <div class="tab-pane fade" id="pills-config" role="tabpanel" aria-labelledby="pills-config-tab" tabindex="0">
+          ...
         </div>
       </div>
       <div id="btnInfo" class="position-absolute top-0 d-none">
@@ -132,8 +152,10 @@
       View on GitHub
     </a>
   </div>
-  <canvas class="d-none" id="canvas" style="border:2px solid black;" width="500" height="500"></canvas>
   <script src="assets/js/tabela-verdade.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
