--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Gerador de Tabela Verdade</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body class="position-lg-relative">
+
   <div class="container d-flex align-items-center justify-content-center flex-column mt-3">
+
+    <!--Navegação Tabulação-->
     <ul class="nav nav-pills" id="pills-tab" role="tablist" style="width: 20rem">
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="pills-main-tab" data-bs-toggle="pill" data-bs-target="#pills-main"
@@ -39,6 +46,9 @@
           <i class="fa-solid fa-clock-rotate-left"></i></button>
       </li>
     </ul>
+    <!--End Navegação Tabulação-->
+
+    <!--Painéis Tabulação-->
     <div class="card shadow-lg mx-3" style="width: 20rem">
       <div class="tab-content" id="pills-tab-content">
         <div class="tab-pane fade show active" id="pills-main" role="tabpanel" aria-labelledby="pills-main-tab"
@@ -52,35 +62,59 @@
         </div>
       </div>
     </div>
+    <!--End Painéis Tabulação-->
+
+    <!--Resultado Card-->
     <div id="card-resultado" class="card position-relative d-none shadow-lg col-12 my-5 ">
-      <div id="tableContent" class="card-body text-center">
+      <div id="table-content" class="card-body text-center">
         <h5 id="titulo-resultado"></h5>
         <hr class="mb-0" />
         <div class="overflow-auto">
+
+          <!--Resultado Tabela-->
           <table id="table-resposta" class="table table-hover table-sm table-bordered mb-0">
             <thead class="table-secondary header"></thead>
             <tbody></tbody>
           </table>
+          <!--End Resultado Tabela-->
+
         </div>
       </div>
+
+      <!--PDF Button-->
       <div class="position-absolute top-0">
         <a class="btn btn-primary" href="javascript:window.print();">
           <i class="fas fa-file-pdf"></i></a>
       </div>
+      <!--End PDF Button-->
+
     </div>
+    <!--End Resultado Card-->
+
   </div>
+
+  <!--Project Info Div-->
   <div class="small text-center mt-2 fixed-bottom bg-dark text-white">V.1.2.0 - <a class="text-decoration-none"
       href="https://github.com/vitoriasilva13/tabela-verdade" target="_blank"><i class="fab fa-github"></i>
       View on GitHub
     </a>
   </div>
+  <!--End Project Info Div-->
+
+  <!--Error Alert-->
   <div id="alert-content" class="position-absolute" style="width: 20rem; top: 0; right:0;">
   </div>
+  <!--End Error Alert-->
+
+  <!--Scripts-->
   <script src="assets/js/tabela-verdade.js"></script>
   <script src="assets/js/tab-content.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+  <!--End Scripts-->
+
 </body>
 
 </html>
